create a word puzzle game

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Word Play</title>
+    <title>Word Puzzle</title>
   </head>
   <body>
     <div class="container input-sentence">
       <div class="jumbotron">
         <h1>Enter a random sentence below.</h1>
         <p>
-          And you'll get a new sentence made of all the words with more than three characters, reversed. Just because. 
+          This little app will hide the original sentence and show the resulting word puzzle, so that another person can try and guess it.
         </p>
       </div>
-      <form>
+      <div id="game">
+        <form>
         <div class="form-group">
           <label for="random-sentence"></label>
           <input id="random-sentence" class="form-control input-lg" type="text" >
@@ -24,13 +25,24 @@
         <button type="submit" class="btn btn-primary btn-lg btn-block">Play</button>
       </form>
     </div>
+    </div>
     <div class="container display-transformed-sentence">
       <div class="panel panel-default">
           <div class="panel-body">
-              <h1>This is your new sentence:</h1>
+              <h1>Try and guess it:</h1>
               <h2>
-                "<span id="transformed-sentence"></span>."
+                "<span id="transformed-sentence"></span>"
               </h2>
+              <div id="solve">
+              <form><button type="submit" class="btn btn-primary btn-lg btn-block">Show me the answer!</button></form>
+              </div>
+          </div>
+      </div>
+      <div class="panel panel-default display-solution">
+          <div class="panel-body">
+            <h2>
+              This is the solution: "<span id="original-sentence"></span>"
+            </h2>
           </div>
       </div>
     </div>
